--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -10,36 +10,34 @@
     <% end %>
   </div>
 </div>
+</div>
 
-
-<div class = "block">
+<section class = "block">
 <!-- <div class="container"> -->
    <% @projects.each do |project| %>
- <div class ="card col-sm-12 col-md-4 col-lg-4">
+ <div class ="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+   <div class="card">
+
     <div class ="pr_name"><%= project.title.upcase() %></div><hr>
 
-        <div class ="todos">
+          <div class ="todos">
           <ul>
           <% @todos.each do |todo| %>
             <% if todo.project_id == project.id%>
 
                   <div class="point">
-                       <input type="checkbox" name="todo"> <div class="text"> <%= todo.text%></div>
+                       <div class = "check"> <input type="checkbox" name="todo" ></div> <div class="text"> <%= todo.text%></div>
                   </div>
-
-
             <% end %>
-
          <% end %>
          </ul>
        </div>
+       </div>
      </div>
     <% end %>
-</div>
+</section>
 
 
-
-<div id ="submit_form">
-<%= render "create"%>
-</div>
-</div>
+  <div id ="submit_form">
+    <%= render "create"%>
+  </div>
