--- a/app/views/todos/_create.html.erb
+++ b/app/views/todos/_create.html.erb
@@ -1,18 +1,15 @@
 <%= form_for @todo ,:html => { :id => "fo" } do |form| %>
-<p>
-    <h2> <%= form.label "НОВАЯ ЗАДАЧА" %> </h2> <br>
-    <%= form.text_field :text, :placeholder => "Название задачи..." %>
-</p>
 
-<p>
-<%= form.collection_select :project_id, Project.all, :id, :title %>
+  <div class ="pr_name"> <%= form.label "НОВАЯ ЗАДАЧА" %> </div><hr>
+  <div class ="holder">  <%= form.text_field :text, :placeholder => "Название задачи...", class: "text_holder"  %> </div>
 
-</p>
+  <div class ="sel">
+    <%= form.collection_select :project_id, Project.all, :id, :title %>
+  </div>
 
-<p>
-  <!-- <input type="button" id="btn-c" value="ОТМЕНА"/> -->
-  <!-- <input type="submit" id="btn-s" value="ОК"/> -->
-  <%= link_to "ОТМЕНА", root_path, id: "btn-c" %>
-  <%= link_to "OK",root_path, id: "btn-s" %>
-</p>
+
+  <div class ="two_btn">
+    <%= form.submit "ОТМЕНА",class:"btn", id: "btn-c" %>
+    <%= form.submit "OK",class:"btn", id: "btn-s" %>
+  </div>
 <% end %>
